--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: main
 	<div class="container">
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail-project">
-				<img src="images/connections.svg">
+				<img src="images/connections.svg" alt="Connect nay data source">
 				<div class="caption">
 					<h2>Connect any data source</h2>
 					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
@@ -43,7 +43,7 @@ layout: main
 
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail-project">
-				<img src="images/customize.svg">
+				<img src="images/customize.svg" alt="Customize your business context">
 				<div class="caption">
 					<h2>Customize your business context</h2>
 					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
@@ -53,7 +53,7 @@ layout: main
 
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail-project">
-				<img src="images/timer.svg">
+				<img src="images/timer.svg" alt="Deliver faster">
 				<div class="caption">
 					<h2>Deliver faster</h2>
 					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
@@ -64,7 +64,7 @@ layout: main
 
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-4 col-lg-push-8 col-lg-offset-0 col-xs-10 col-xs-offset-1  text-left">
+			<div class="col-lg-4 col-lg-push-8 col-lg-offset-0 col-xs-10 col-xs-offset-1 text-left">
 				<br/>
 				<h1 class="text-left">Context is everywhere.</h1>
 				<hr/>
@@ -77,16 +77,16 @@ layout: main
 				<div class="window">
 					<div class="frames" id="frames">
 						<div class="frame">
-							<img width="100%" src="../images/multi-browser-frame1.jpg" />
+							<img style="width:100%" src="../images/multi-browser-frame1.jpg" alt="Frame 1" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/multi-browser-frame2.jpg" />
+							<img style="width:100%" src="../images/multi-browser-frame2.jpg" alt="Frame 2" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/multi-browser-frame3.jpg" />
+							<img style="width:100%" src="../images/multi-browser-frame3.jpg" alt="Frame 3"/>
 						</div>
 					</div>
-					<img width="100%" src="../images/multi-browser-frame1.jpg" />
+					<img style="width:100%" src="../images/multi-browser-frame1.jpg" alt="Frame holder" />
 				</div>
 			</div>
 		</div>
