--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: main
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h1>Search, properly done</h1>
-					<img class="source-icon" src="images/banner_icons.png">
+					<img class="source-icon" src="images/banner_icons.png" alt="Connect any cloud or local service">
 					<h3>A complete API built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
@@ -33,7 +33,7 @@ layout: main
 	<div class="container">
 		<div class="col-sm-6 col-md-4">
 			<div class="thumbnail-project">
-				<img src="images/connections.svg" alt="Connect nay data source">
+				<img src="images/connections.svg" alt="Connect any data source">
 				<div class="caption">
 					<h2>Connect any data source</h2>
 					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
