New animation for landing - first draft

--- a/index-smart.html
+++ b/index-smart.html
@@ -74,33 +74,22 @@ layout: main
 				<p class="text-center"><a href="/get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
 			</div>
 			<div class="col-lg-8 col-lg-pull-4 col-lg-offset-0 col-xs-10 col-xs-offset-1">
-				<div class="window">
+				<div class="animation">
 					<div class="frames" id="frames">
 						<div class="frame">
-							<img src="../images/multi-browser-frame1.jpg" />
+							<img width="100%" src="../images/anyfetch-1.png" />
 						</div>
 						<div class="frame">
-							<img src="../images/multi-browser-frame2.jpg" />
+							<img width="100%" src="../images/anyfetch-2.png" />
 						</div>
 						<div class="frame">
-							<img src="../images/multi-browser-frame3.jpg" />
+							<img width="100%" src="../images/anyfetch-3.png" />
+						</div>
+						<div class="frame">
+							<img width="100%" src="../images/anyfetch-4.png" />
 						</div>
 					</div>
-					<img width="100%" src="../images/multi-browser-frame1.jpg" />
-				</div>
-				<div class="smartphone">
-					<div class="frames" id="frames">
-						<div class="frame">
-							<img src="../images/smartphone-1.png" />
-						</div>
-						<div class="frame">
-							<img src="../images/smartphone-2.png" />
-						</div>
-						<div class="frame">
-							<img src="../images/smartphone-3.png" />
-						</div>
-					</div>
-					<img height="100%" src="../images/smartphone-1.png" />
+					<img width="100%" src="../images/anyfetch-1.png" />
 				</div>
 			</div>
 		</div>
