--- a/index.html
+++ b/index.html
@@ -31,38 +31,6 @@ layout: main
 <div class="row browser">
 
 	<div class="container">
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail-project">
-				<img src="images/connections.svg" alt="Connect any data source">
-				<div class="caption">
-					<h2>Connect any data source</h2>
-					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail-project">
-				<img src="images/customize.svg" alt="Customize your business context">
-				<div class="caption">
-					<h2>Customize your business context</h2>
-					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail-project">
-				<img src="images/timer.svg" alt="Deliver faster">
-				<div class="caption">
-					<h2>Deliver faster</h2>
-					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
 		<div class="row">
 			<div class="col-lg-4 col-lg-push-8 col-lg-offset-0 col-xs-10 col-xs-offset-1 text-left">
 				<br/>
@@ -96,14 +64,38 @@ layout: main
 	</div>
 </div>
 
-<div class="content-section-b">
+<div class="content-section-b row browser">
+
 	<div class="container">
-		<h1 class="white">See how you can use AnyFetch</h1>
-		<br />
-		<ul class="list-inline intro-social-buttons" style="text-align:center">
-			<li><a href="use-cases.html" class="btn btn-default btn-lg"><span class="network-name">Use cases</span></a>
-			</li>
-		</ul>
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/connections.svg" alt="Connect any data source">
+				<div class="caption">
+					<h2>Connect any data source</h2>
+					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/customize.svg" alt="Customize your business context">
+				<div class="caption">
+					<h2>Customize your business context</h2>
+					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/timer.svg" alt="Deliver faster">
+				<div class="caption">
+					<h2>Deliver faster</h2>
+					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
