--- a/index.html
+++ b/index.html
@@ -32,29 +32,23 @@ layout: main
 
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-4 col-lg-push-8 col-lg-offset-0 col-xs-10 col-xs-offset-1 text-left">
-				<br/>
-				<h1 class="text-left">Context is everywhere.</h1>
-				<hr/>
-				<h3 style="color: #666">Start developing your app
-				on top of AnyFetch.</h3>
-				<br/>
-				<p class="text-center"><a href="/get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
-			</div>
-			<div class="col-lg-8 col-lg-pull-4 col-lg-offset-0 col-xs-10 col-xs-offset-1">
-				<div class="window">
+			<div class="col-lg-12">
+				<div class="animation">
 					<div class="frames" id="frames">
 						<div class="frame">
-							<img style="width:100%" src="../images/multi-browser-frame1.jpg" alt="Frame 1" />
+							<img width="100%" src="../images/anyfetch-1.jpg" />
 						</div>
 						<div class="frame">
-							<img style="width:100%" src="../images/multi-browser-frame2.jpg" alt="Frame 2" />
+							<img width="100%" src="../images/anyfetch-2.jpg" />
 						</div>
 						<div class="frame">
-							<img style="width:100%" src="../images/multi-browser-frame3.jpg" alt="Frame 3"/>
+							<img width="100%" src="../images/anyfetch-3.jpg" />
+						</div>
+						<div class="frame">
+							<img width="100%" src="../images/anyfetch-4.jpg" />
 						</div>
 					</div>
-					<img style="width:100%" src="../images/multi-browser-frame1.jpg" alt="Frame holder" />
+					<img width="100%" src="../images/anyfetch-1.jpg" />
 				</div>
 			</div>
 		</div>
