--- a/index-smart.html
+++ b/index-smart.html
@@ -12,7 +12,7 @@ layout: main
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h1>Search, properly done</h1>
-					<img class="source-icon" src="images/banner_icons.png">
+					<img class="source-icon" src="images/banner_icons.png" alt="Connect any cloud or local service">
 					<h3>A complete API built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
@@ -31,65 +31,24 @@ layout: main
 <div class="row browser">
 
 	<div class="container">
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail-project">
-				<img src="images/connections.svg">
-				<div class="caption">
-					<h2>Connect any data source</h2>
-					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail-project">
-				<img src="images/customize.svg">
-				<div class="caption">
-					<h2>Customize your business context</h2>
-					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="col-sm-6 col-md-4">
-			<div class="thumbnail-project">
-				<img src="images/timer.svg">
-				<div class="caption">
-					<h2>Deliver faster</h2>
-					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container">
 		<div class="row">
-			<div class="col-lg-4 col-lg-push-8 col-lg-offset-0 col-xs-10 col-xs-offset-1  text-left">
-				<br/>
-				<h1 class="text-left">Context is everywhere.</h1>
-				<hr/>
-				<h3 style="color: #666">Start developing your app
-				on top of AnyFetch.</h3>
-				<br/>
-				<p class="text-center"><a href="/get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
-			</div>
-			<div class="col-lg-8 col-lg-pull-4 col-lg-offset-0 col-xs-10 col-xs-offset-1">
+			<div class="col-lg-12">
 				<div class="animation">
 					<div class="frames" id="frames">
 						<div class="frame">
-							<img width="100%" src="../images/anyfetch-1.png" />
+							<img width="100%" src="../images/anyfetch-1.jpg" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/anyfetch-2.png" />
+							<img width="100%" src="../images/anyfetch-2.jpg" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/anyfetch-3.png" />
+							<img width="100%" src="../images/anyfetch-3.jpg" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/anyfetch-4.png" />
+							<img width="100%" src="../images/anyfetch-4.jpg" />
 						</div>
 					</div>
-					<img width="100%" src="../images/anyfetch-1.png" />
+					<img width="100%" src="../images/anyfetch-1.jpg" />
 				</div>
 			</div>
 		</div>
@@ -99,14 +58,38 @@ layout: main
 	</div>
 </div>
 
-<div class="content-section-b">
+<div class="content-section-b row browser">
+
 	<div class="container">
-		<h1 class="white">See how you can use AnyFetch</h1>
-		<br />
-		<ul class="list-inline intro-social-buttons" style="text-align:center">
-			<li><a href="use-cases.html" class="btn btn-default btn-lg"><span class="network-name">Use cases</span></a>
-			</li>
-		</ul>
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/connections.svg" alt="Connect any data source">
+				<div class="caption">
+					<h2>Connect any data source</h2>
+					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/customize.svg" alt="Customize your business context">
+				<div class="caption">
+					<h2>Customize your business context</h2>
+					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-6 col-md-4">
+			<div class="thumbnail-project">
+				<img src="images/timer.svg" alt="Deliver faster">
+				<div class="caption">
+					<h2>Deliver faster</h2>
+					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
