--- a/index-smart.html
+++ b/index-smart.html
@@ -33,28 +33,37 @@ layout: main
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12">
-				<div class="animation">
-					<div class="frames" id="frames">
-						<div class="frame">
+				<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel">
+					<!-- Indicators -->
+					<ol class="carousel-indicators">
+						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+					</ol>
+
+					<!-- Wrapper for slides -->
+					<div class="carousel-inner">
+						<div class="item active">
 							<img width="100%" src="../images/anyfetch-1.jpg" />
 						</div>
-						<div class="frame">
+						<div class="item">
 							<img width="100%" src="../images/anyfetch-2.jpg" />
 						</div>
-						<div class="frame">
+						<div class="item">
 							<img width="100%" src="../images/anyfetch-3.jpg" />
 						</div>
-						<div class="frame">
+						<div class="item">
 							<img width="100%" src="../images/anyfetch-4.jpg" />
 						</div>
 					</div>
-					<img width="100%" src="../images/anyfetch-1.jpg" />
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<div>
-	<!-- <h2>See how they use it<a href="use-cases.html" class="btn btn-default btn-lg inline-button"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a></h2> -->
+		<!-- <h2>See how they use it<a href="use-cases.html" class="btn btn-default btn-lg inline-button"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a></h2> -->
 	</div>
 </div>
 
