Use/integrate/develop

--- a/index-smart.html
+++ b/index-smart.html
@@ -74,8 +74,8 @@ layout: main
 			<div class="thumbnail-project">
 				<img src="images/connections.svg" alt="Connect any data source">
 				<div class="caption">
-					<h2>Connect any data source</h2>
-					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
+					<h2>Use</h2>
+					<p class="lead">Out-of-the box solutions; up in minutes.</p>
 				</div>
 			</div>
 		</div>
@@ -84,8 +84,8 @@ layout: main
 			<div class="thumbnail-project">
 				<img src="images/customize.svg" alt="Customize your business context">
 				<div class="caption">
-					<h2>Customize your business context</h2>
-					<p class="lead">Customize AnyFetch to your context and instantly get relevant data from your existing tools.</p>
+					<h2>Integrate</h2>
+					<p class="lead">Lightweight, customizable and economic solution.</p>
 				</div>
 			</div>
 		</div>
@@ -94,8 +94,8 @@ layout: main
 			<div class="thumbnail-project">
 				<img src="images/timer.svg" alt="Deliver faster">
 				<div class="caption">
-					<h2>Deliver faster</h2>
-					<p class="lead">The whole setup takes less than a few hours, that's about 100&times; less than enterprise search.</p>
+					<h2>Develop</h2>
+					<p class="lead">Develop with AnyFetch.</p>
 				</div>
 			</div>
 		</div>
