--- a/index-smart.html
+++ b/index-smart.html
@@ -45,16 +45,16 @@ layout: main
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner">
 						<div class="item active">
-							<img width="100%" src="../images/anyfetch-1.jpg" />
+							<img width="100%" src="../images/anyfetch-1.png" />
 						</div>
 						<div class="item">
-							<img width="100%" src="../images/anyfetch-2.jpg" />
+							<img width="100%" src="../images/anyfetch-2.png" />
 						</div>
 						<div class="item">
-							<img width="100%" src="../images/anyfetch-3.jpg" />
+							<img width="100%" src="../images/anyfetch-3.png" />
 						</div>
 						<div class="item">
-							<img width="100%" src="../images/anyfetch-4.jpg" />
+							<img width="100%" src="../images/anyfetch-4.png" />
 						</div>
 					</div>
 				</div>
