--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ layout: main
 				<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel">
 					<!-- Indicators -->
 					<ol class="carousel-indicators">
-						<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="0" class="active">1</li>
+						<li data-target="#carousel-example-generic" data-slide-to="1">2</li>
+						<li data-target="#carousel-example-generic" data-slide-to="2">3</li>
+						<li data-target="#carousel-example-generic" data-slide-to="3">4</li>
 					</ol>
 
 					<!-- Wrapper for slides -->
