--- a/enterprise.html
+++ b/enterprise.html
@@ -22,6 +22,10 @@ layout: main
 </div>
 
 <div class="container content">
+	
+	<div class="row">
+		<img class="header-img" src="images/howitworks.jpg" />
+	</div>
 
 	<div class="row row-text">
 		<div class="col-lg-6">
