--- a/integrate.html
+++ b/integrate.html
@@ -3,17 +3,30 @@ title: AnyFetch | Integrate
 layout: main
 ---
 
+<div class="intro-header min">
 
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-message">
+					<h2>Integrate in a few steps</h2>
+					<h2 class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">Become a partner</a></h2>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
 <div class="container content">
 	<div class="row">
-		<div class="col-lg-12">
-			<h2>Fait moi rêver Mehdi</h2>
-			<hr>
-		</div>
+		<img class="header-img" src="images/howitworks.jpg" />
 	</div>
 	<div class="row">
 		<div class="col-lg-12">
-		<!-- Ici -->
+				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">Become a partner</a></p>
 		</div>
 	</div>
 </div>
