Use cases : text salesfetch

--- a/use-cases.html
+++ b/use-cases.html
@@ -31,8 +31,8 @@ layout: main
 							<div class="col-lg-6 col-lg-push-3 col-sm-push-4  col-sm-6 col-lg-offset-1 col-sm-offset-1">
 								<span class="invisible-anchor" id="project1">&nbsp;</span>
 								<div class="clearfix"></div>
-								<h2>The ultimate business assistant</h2>
-								<p class="lead">We are on a mission to revolutionize CRM and the way business users interact with their data. With AnyFetch, users get contextual information, from all their cloud services, directly within Salesforce.</p>
+								<h2>AnyFetch for Salesforce</h2>
+								<p class="lead">AnyFetch for salesforce is an out-of-the-box solution for Salesforce : Zero install, Zero infrastrure, Zero work and immediate results.</p>
 								<p class="text-centered"><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">AnyFetch for Salesforce »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
