--- a/integrate.html
+++ b/integrate.html
@@ -11,7 +11,7 @@ layout: main
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h2>Integrate in a few steps</h2>
-					<h2 class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">Become a partner</a></h2>
+					<h2 class="text-centered"><a class="btn btn-default" href="mailto:partner@anyfetch.com" role="button">Become a partner</a></h2>
 				</div>
 			</div>
 		</div>
@@ -26,7 +26,7 @@ layout: main
 	</div>
 	<div class="row">
 		<div class="col-lg-12">
-				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">Become a partner</a></p>
+				<p class="text-centered"><a class="btn btn-default" href="mailto:partner@anyfetch.com" role="button">Become a partner</a></p>
 		</div>
 	</div>
 </div>
