--- a/integrate.html
+++ b/integrate.html
@@ -22,7 +22,7 @@ layout: main
 </div>
 <div class="container content">
 	<div class="row">
-		<img class="header-img" src="images/howitworks.jpg" />
+		<img class="header-img" src="images/howitworks.png" />
 	</div>
 	<div class="row">
 		<div class="col-lg-12">
