--- a/index.html
+++ b/index.html
@@ -61,10 +61,6 @@ layout: main
 			</div>
 		</div>
 	</div>
-
-	<div>
-		<!-- <h2>See how they use it<a href="use-cases.html" class="btn btn-default btn-lg inline-button"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a></h2> -->
-	</div>
 </div>
 
 <div class="content-section-b row browser">
@@ -76,7 +72,7 @@ layout: main
 				<div class="caption">
 					<br />
 					<p class="lead">Out-of-the box solutions; up in minutes.</p><br />
-					<a href="use-cases.html" class="btn btn-default btn-lg"><span class="network-name">Use</span></a>
+					<a href="use.html" class="btn btn-default btn-lg"><span class="network-name">Use</span></a>
 				</div>
 			</div>
 		</div>
@@ -98,18 +94,9 @@ layout: main
 				<div class="caption">
 				<br />
 					<p class="lead">Develop with AnyFetch.</p><br />
-					<a href="developers.html" class="btn btn-default btn-lg"><span class="network-name">Develop</span></a>
+					<a href="develop.html" class="btn btn-default btn-lg"><span class="network-name">Develop</span></a>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-
-<!-- <div class="row">
-	<div class="col-md-2 col-md-offset-4 col-xs-6 col-xs-3 partner-container">
-		<img class="partner-img" src="/images/salesforce.jpg">
-	</div>
-	<div class="col-md-2 col-md-offset-0 col-xs-6 col-xs-3 partner-container">
-		<img class="partner-img" src="/images/axa.jpg">
-	</div>
-</div> -->
