--- a/develop.html
+++ b/develop.html
@@ -33,7 +33,7 @@ layout: main
 		<div class="col-lg-12">
 		<hr>
 			<h2>Sending</h2>
-			<p>You can use our work-out-of-the-bow providers for standard services (Dropbox, GMail, Salesforce)...<br />
+			<p>You can use our work-out-of-the-box providers for standard services (Dropbox, GMail, Salesforce)...<br />
 			But sometime, you'll want to send your own documents. This is dead simple!</p>
 
 			Create the document first:
