--- a/use.html
+++ b/use.html
@@ -52,8 +52,8 @@ layout: main
 							<div class="col-lg-6 col-sm-6 col-lg-offset-1 col-sm-offset-1">
 								<span class="invisible-anchor" id="project2">&nbsp;</span>
 								<div class="clearfix"></div>
-								<h2>Revolutionizing enterprise search</h2>
-								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
+								<h2>Enterprise</h2>
+								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development.</p>
 								<p class="text-centered"><a class="btn btn-default" href="./enterprise.html" role="button">View details »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-3 use-case-thumbnail thumbnail">
@@ -74,7 +74,7 @@ layout: main
 								<span class="invisible-anchor" id="project3">&nbsp;</span>
 								<div class="clearfix"></div>
 								<h2>Developers love it</h2>
-								<p class="lead">Check out what developers are doing with AnyFetch, and how they are delivering value to their users with a great user experience. A working prototype can be built in minutes and quickly deployed to production.</p>
+								<p class="lead">Use AnyFetch to power your app or integrate AnyFetch as a feature.</p>
 								<p class="text-centered"><a class="btn btn-default" href="./how-it-works.html" role="button">See why »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
