--- a/integrate.html
+++ b/integrate.html
@@ -11,7 +11,7 @@ layout: main
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h2>Integrate in a few steps</h2>
-					<h2 class="text-centered"><a class="btn btn-default" href="mailto:partner@anyfetch.com" role="button">Become a partner</a></h2>
+					<h3>Customyze AnyFetch to your need</h3>
 				</div>
 			</div>
 		</div>
