--- a/develop.html
+++ b/develop.html
@@ -11,7 +11,7 @@ layout: main
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h2>Developers</h2>
-					<h3>Building your own document search-engine is but a few API calls away</h3>
+					<h3>Building your own unified search-engine is but a few API calls away</h3>
 				</div>
 			</div>
 		</div>
