--- a/about-us.html
+++ b/about-us.html
@@ -11,7 +11,7 @@ layout: main
 			<hr>
 				<div class="col-md-3 col-sm-6">
 					<div class="thumbnail-portrait">
-					<img class="portrait" src="images/mehdi-haut.jpg">
+					<img class="portrait" src="images/team/mehdi.jpg">
 						<div class="caption">
 							<h4>Mehdi Bouheddi</h4>
 							<p>CEO</p>
@@ -23,7 +23,7 @@ layout: main
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="thumbnail-portrait">
-					<img class="portrait" src="images/matthieu-haut.jpg">
+					<img class="portrait" src="images/team/matthieu.jpg">
 						<div class="caption">
 							<h4>Matthieu Bacconnier</h4>
 							<p>CTO</p>
@@ -35,7 +35,7 @@ layout: main
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="thumbnail-portrait">
-					<img class="portrait" src="images/hugo-haut.jpg">
+					<img class="portrait" src="images/team/hugo.jpg">
 						<div class="caption">
 							<h4>Hugo Duroux</h4>
 							<p>Backend</p>
@@ -47,7 +47,7 @@ layout: main
 				</div>
 				<div class="col-md-3 col-sm-6">
 					<div class="thumbnail-portrait">
-					<img class="portrait" src="images/tanguy-haut.jpg">
+					<img class="portrait" src="images/team/tanguy.jpg">
 						<div class="caption">
 							<h4>Tanguy Hélesbeux</h4>
 							<p>Product</p>
@@ -81,4 +81,4 @@ layout: main
 		</div>
 
 </div>
-				<img class="team" src="images/team.jpg" />
+				<img class="team" src="images/team/team.jpg" />
