--- a/get-started.html
+++ b/get-started.html
@@ -39,7 +39,7 @@ layout: main
 			</div>
 			<div class="col-lg-5 col-lg-offset-1 margin-bottom">
 				<div class="jumbotron">
-					<h1 class="title">Already registered ?</h1>
+					<h1 class="title">Already<br />registered ?</h1>
 					<p><a href="http://app.anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Access app</span></a></p>
 				</div>
 			</div>
