--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@ layout: main
 					<!-- Wrapper for slides -->
 					<div class="carousel-inner">
 						<div class="item active">
-							<img width="100%" src="../images/anyfetch-1.png" />
+							<img width="100%" src="../images/animation/anyfetch-1.png" />
 						</div>
 						<div class="item">
-							<img width="100%" src="../images/anyfetch-2.png" />
+							<img width="100%" src="../images/animation/anyfetch-2.png" />
 						</div>
 						<div class="item">
-							<img width="100%" src="../images/anyfetch-3.png" />
+							<img width="100%" src="../images/animation/anyfetch-3.png" />
 						</div>
 						<div class="item">
-							<img width="100%" src="../images/anyfetch-4.png" />
+							<img width="100%" src="../images/animation/anyfetch-4.png" />
 						</div>
 					</div>
 				</div>
@@ -68,7 +68,7 @@ layout: main
 	<div class="container">
 		<div class="col-sm-4 col-md-4">
 			<div class="thumbnail-project">
-				<img class="intro-svg" src="images/connections.svg" alt="Connect any data source">
+				<img class="intro-svg" src="images/svg/connections.svg" alt="Connect any data source">
 				<div class="caption">
 					<br />
 					<p class="lead">Out-of-the box solutions; up in minutes.</p><br />
@@ -79,7 +79,7 @@ layout: main
 
 		<div class="col-sm-4 col-md-4">
 			<div class="thumbnail-project">
-				<img class="intro-svg" src="images/customize.svg" alt="Customize your business context">
+				<img class="intro-svg" src="images/svg/customize.svg" alt="Customize your business context">
 				<div class="caption">
 				<br />
 					<p class="lead">Lightweight, customizable and economic solution.</p>
@@ -90,7 +90,7 @@ layout: main
 
 		<div class="col-sm-4 col-md-4">
 			<div class="thumbnail-project">
-				<img class="intro-svg" src="images/code.svg" alt="Deliver faster">
+				<img class="intro-svg" src="images/svg/code.svg" alt="Deliver faster">
 				<div class="caption">
 				<br />
 					<p class="lead">Develop with AnyFetch.</p><br />
