--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: main
 				<img class="intro-svg" src="images/svg/connections.svg" alt="Connect any data source">
 				<div class="caption">
 					<br />
-					<p class="lead">Out-of-the box solutions; up in minutes.</p><br />
+					<p class="lead">Out-of-the box solutions, up in minutes.</p><br />
 					<a href="use.html" class="btn btn-default btn-lg"><span class="network-name">Use</span></a>
 				</div>
 			</div>
