--- a/use.html
+++ b/use.html
@@ -54,7 +54,7 @@ layout: main
 								<div class="clearfix"></div>
 								<h2>Enterprise</h2>
 								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development.</p>
-								<p class="text-centered"><a class="btn btn-default" href="./enterprise.html" role="button">View details »</a></p>
+								<p class="text-centered"><a class="btn btn-default" href="/integrate.html" role="button">View details »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/use_cases/screen_anyfetch.jpg">
@@ -75,7 +75,7 @@ layout: main
 								<div class="clearfix"></div>
 								<h2>Developers love it</h2>
 								<p class="lead">Use AnyFetch to power your app or integrate AnyFetch as a feature.</p>
-								<p class="text-centered"><a class="btn btn-default" href="./how-it-works.html" role="button">See why »</a></p>
+								<p class="text-centered"><a class="btn btn-default" href="/develop.html" role="button">See why »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/use_cases/screen_code.jpg">
