--- a/integrate.html
+++ b/integrate.html
@@ -24,9 +24,35 @@ layout: main
 	<div class="row">
 		<img class="header-img" src="images/howitworks.png" />
 	</div>
-	<div class="row">
-		<div class="col-lg-12">
-				<p class="text-centered"><a class="btn btn-default" href="mailto:partner@anyfetch.com" role="button">Become a partner</a></p>
+</div>
+
+<div class="content-section-b">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-8 col-lg-offset-1 col-sm-push-3  col-sm-9">
+				<div class="clearfix"></div>
+				<h3>Security</h3>
+				<p class="lead">Security is of the uttermost importance to us, as it is to you.</p>
+				<p>We store all your files in secure indices, ensuring a strict no-access rule for all your data.<br />
+				All traffic between your servers and ours is encrypted using SSL.</p>
+
+				<p>A chaos-monkey script runs continuously trying to breach our system, ensuring your data-policies are correctly applied.</p>
+
+				<p>Finally, your original document is never stored on a hard drive: we only keep it in RAM for the duration of our analysis, then discard the file and only keep our secured index data: <strong>you remain the sole owner of the original document</strong>.</p>
+			</div>
+			<div class="col-lg-2 col-sm-pull-9  col-sm-2">
+				<img class="img-responsive" src="images/svg/lock.svg" alt="">
+			</div>
 		</div>
+	</div>
+	<!-- /.container -->
+</div>
+
+<div class="row">
+	<div class="col-lg-12">
+			<p class="text-centered"><br /><br /><br />We are currently on private beta, but feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a>.<br />
+			You can also give us your email address to receive more informations.<br /><br /></p>
 	</div>
 </div>
