--- a/about-us.html
+++ b/about-us.html
@@ -68,7 +68,7 @@ layout: main
 				<hr>
 				<div class="contact">
 					<p>
-					For more information or any request, feel free to drop us an e-mail at:<br />
+					For more information or any request, feel free to contact us at:<br />
 					<span class="email"><a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a></span>
 					</p>
 				</div>
