--- a/get-started.html
+++ b/get-started.html
@@ -15,8 +15,8 @@ layout: main
 		<div class="col-lg-6 margin-bottom">
 			<br />
 			<br />
-			<p>We are currently on private beta, but feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a>.<br />
-				You can also give us your email address to receive more informations.</p>
+			<p>For more information or any request, please contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a>.<br />
+				Feel free to leave your Email address and we will get back to you in person!</p>
 				<form action="http://neamar.fr/Misc/papiel.php" method="post" id="subscribe">
 					<div class="input-group mc-field-group">
 						<input type="email" value="" name="mail" required placeholder="" id='email-field' class="form-control">
