--- a/integrate.html
+++ b/integrate.html
@@ -52,7 +52,7 @@ layout: main
 
 <div class="row">
 	<div class="col-lg-12">
-			<p class="text-centered"><br /><br /><br />We are currently on private beta, but feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a>.<br />
-			You can also give us your email address to receive more informations.<br /><br /></p>
+			<p class="text-centered"><br /><br /><br />Contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a> for more infomation.<br />
+			</p>
 	</div>
 </div>
