--- a/get-started.html
+++ b/get-started.html
@@ -16,7 +16,7 @@ layout: main
 			<br />
 			<br />
 			<p>For more information or any request, please contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a>.<br />
-				Feel free to leave your Email address and we will get back to you in person!</p>
+				Feel free to leave your email address and we will get back to you in person!</p>
 				<form action="http://neamar.fr/Misc/papiel.php" method="post" id="subscribe">
 					<div class="input-group mc-field-group">
 						<input type="email" value="" name="mail" required placeholder="" id='email-field' class="form-control">
