--- a/use.html
+++ b/use.html
@@ -11,7 +11,7 @@ layout: main
 			<div class="col-lg-12">
 				<div class="intro-message">
 					<h2>Business-ready solutions</h2>
-					<h3>API + mobile/web applications</h3>
+					<h3>API + mobile &amp; web applications</h3>
 				</div>
 			</div>
 		</div>
@@ -32,7 +32,7 @@ layout: main
 								<span class="invisible-anchor" id="project1">&nbsp;</span>
 								<div class="clearfix"></div>
 								<h2>AnyFetch for Salesforce</h2>
-								<p class="lead">AnyFetch for salesforce is an out-of-the-box solution for Salesforce: Zero install, Zero infrastrure and immediate results. Estimated release date: September 2014.</p>
+								<p class="lead">AnyFetch for salesforce is an out-of-the-box solution for Salesforce: Zero install, Zero infrastrure and immediate results. <br /><em>Estimated release date: September 2014.</em></p>
 								<p class="text-centered"><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">AnyFetch for Salesforce »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
