removed horizontal scroll in integrate.html

--- a/integrate.html
+++ b/integrate.html
@@ -50,7 +50,7 @@ layout: main
 	<!-- /.container -->
 </div>
 
-<div class="row">
+<div class="row" style="margin-right: 0px">
 	<div class="col-lg-12">
 			<p class="text-centered"><br /><br /><br />Contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a> for more infomation.<br />
 			</p>
