Bigger images in use-cases

--- a/use.html
+++ b/use.html
@@ -23,12 +23,12 @@ layout: main
 
 <div class="container content">
 
-				<div class="content-section-c">
+				<div class="use-case">
 
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-lg-push-3 col-sm-push-4  col-sm-6 col-lg-offset-1 col-sm-offset-1">
+							<div class="col-lg-6 col-lg-push-5 col-sm-push-4  col-sm-6">
 								<span class="invisible-anchor" id="project1">&nbsp;</span>
 								<div class="clearfix"></div>
 								<h2>AnyFetch for Salesforce</h2>
@@ -36,7 +36,7 @@ layout: main
 								<em>Estimated release date: September 2014.</em></p>
 								<p class="text-centered"><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">AnyFetch for Salesforce »</a></p>
 							</div>
-							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
+							<div class="col-lg-4 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/use_cases/salesfetch.jpg">
 							</div>
 						</div>
@@ -45,19 +45,19 @@ layout: main
 					<!-- /.container -->
 				</div>
 
-				<div class="content-section-c">
+				<div class="use-case">
 
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-sm-6 col-lg-offset-1 col-sm-offset-1">
+							<div class="col-lg-6 col-sm-6">
 								<span class="invisible-anchor" id="project2">&nbsp;</span>
 								<div class="clearfix"></div>
 								<h2>Enterprise</h2>
 								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development. The solution comes with fully customizable web and mobile application.</p>
 								<p class="text-centered"><a class="btn btn-default" href="/integrate.html" role="button">View details »</a></p>
 							</div>
-							<div class="col-lg-3 col-sm-3 use-case-thumbnail thumbnail">
+							<div class="col-lg-3 col-sm-3 col-lg-offset-1 col-sm-offset-1 use-case-thumbnail thumbnail">
 								<img src="images/use_cases/screen_anyfetch.jpg">
 							</div>
 						</div>
@@ -66,19 +66,19 @@ layout: main
 					<!-- /.container -->
 				</div>
 
-				<div class="content-section-c">
+				<div class="use-case">
 
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-lg-push-3 col-sm-push-4  col-sm-6 col-lg-offset-1 col-sm-offset-1">
+							<div class="col-lg-6 col-lg-push-5 col-sm-push-4  col-sm-6">
 								<span class="invisible-anchor" id="project3">&nbsp;</span>
 								<div class="clearfix"></div>
 								<h2>Developers love it</h2>
 								<p class="lead">Use AnyFetch to power your app or integrate AnyFetch as a feature.</p>
 								<p class="text-centered"><a class="btn btn-default" href="/develop.html" role="button">See why »</a></p>
 							</div>
-							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
+							<div class="col-lg-4 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/use_cases/screen_code.jpg">
 							</div>
 						</div>
