how it works image fix

--- a/enterprise.html
+++ b/enterprise.html
@@ -22,9 +22,9 @@ layout: main
 </div>
 
 <div class="container content">
-	
+
 	<div class="row">
-		<img class="header-img" src="images/howitworks.jpg" />
+		<img class="header-img" src="images/howitworks.png" />
 	</div>
 
 	<div class="row row-text">
