--- a/use.html
+++ b/use.html
@@ -53,7 +53,7 @@ layout: main
 								<span class="invisible-anchor" id="project2">&nbsp;</span>
 								<div class="clearfix"></div>
 								<h2>Enterprise</h2>
-								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development. The solution comes with fully customizable web and mobile application.</p>
+								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development. The solution comes with fully customizable web and mobile applications.</p>
 								<p class="text-centered"><a class="btn btn-default" href="/integrate.html" role="button">View details »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-3 col-lg-offset-1 col-sm-offset-1 use-case-thumbnail thumbnail">
