--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: main
 				<img class="intro-svg" src="images/svg/customize.svg" alt="Customize your business context">
 				<div class="caption">
 				<br />
-					<p class="lead">Lightweight, customizable and economic solution.</p>
+					<p class="lead">Lightweight, customizable and economical solution.</p>
 					<a href="integrate.html" class="btn btn-default btn-lg"><span class="network-name">Integrate</span></a>
 				</div>
 			</div>
